# SunnitAI-V2

./: .env.example  .gitignore  deploy.sh  env.production.template  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: conventions.mdc  cursor-rules.mdc  directives.mdc  extractor-manual-rule.mdc  minimal-complexity.mdc  node-alignment-analysis.mdc  preprocessing-pipeline.mdc  project.mdc  rag-agentic-pipeline.mdc  rag-testing-workflow.mdc  schema-consistency.mdc
.github/workflows/: deploy.yml
parsed_data/: 13-4-2025_en.json  20-4-2025_en.json  27-4-2025_en.json  6-4-2025_en.json
scripts/: test-ssh-deploy.ps1  update_runpod_url.sh
src/: __main__.py  cypher_cli.py  main.py  registry.py  scaffolding.py
src/chatbot/: api.py  session.py
src/chatbot/OLD VERSION/: api.py  session.py
src/preprocessing/: extractor.py  generate_embeddings.py  main.py  parallel_llm_extractor.py  parse.py  parser.py  validate_and_normalize.py  write_kg.py
src/preprocessing/schema/: enums.py  indexing.py  nodes.py  schema.py
src/rag/: ai_chat.py  cypher_logger.py  document_generation.py  graph_nodes.py  language.py  lookup_indexes.py  lookups.py  main.py  models.py  prompts.py  rag.rar  utils.py  visualize_agent.py
src/rag/OLD VERSION/: graph_nodes.py  main.py  models.py
src/utils/: db_client.py
